--- a/program-interaction/levels0-99/l-19.MD
+++ b/program-interaction/levels0-99/l-19.MD
@@ -17,11 +17,11 @@ sub_env = {}
 # Run the executable with the specific file as input
 with open('/tmp/gzxehm', 'w+') as input_file:
     # Write the hardcoded password to the file
-    # Use this line only if you did not create the file with text using bash.
-    file.write('yltuzpik\n')
+    # Use this line only if you did not create the file with text using bash. 
+    input_file.write('yltuzpik\n')
 
     # Move the file pointer to the beginning of the file
-    file.seek(0)
+    input_file.seek(0)
 
     result = subprocess.run([executable_path] + args, capture_output=True, text=True, env=sub_env, stdin=input_file)
 
@@ -31,7 +31,7 @@ print("Output:", result.stdout)
 # print("Return Code:", result.returncode)
 ```
 ## Notes
-The `input` parameter in the subprocess run command requires a mapping of environmental variables so I decided to submit them using a seperate variable than in line for ease of use.
+You can only use stdin or input when nvoking the run method. I use the stdin parameter as I am passing a file in as input and redirecting stdin. Addtionally I have to add my hardcoded password into the tmp file as I can't pass values into both stdin and input. If the file was created and password was passed using bash take care to open /tmp/gzxehm using 'r' instead of 'w+' as to not overwrite the existing data in the file.
 
 # Solution
-pwn.college{cI-c9rHXJexDh8VykRtfoPunVVi.QX4EDL3MTM3QzW}
+pwn.college{Q7Nvganyqake07dmDojPuuScNea.QX5EDL3MTM3QzW}
