--- a/program-interaction/levels0-99/l-20.MD
+++ b/program-interaction/levels0-99/l-20.MD
@@ -1,5 +1,5 @@
 # Process
-We start by invoking `ipython` in the shell and inputting the program.
+For the sake of simplicity and speed, we create a python script in a preferred editor and just invoke it using ipython to meet the challenge objectives. Ensure that the file is added in our home directory and made executable (`touch script.py; chmod +x script.py`). We then invoke `ipython` in the shell and use the ipython magic command run `%run .~/script` to get the solution.
 
 ## Program
 ```python
@@ -8,12 +8,15 @@ import subprocess
 # Path to the challenge
 executable_path = '/challenge/embryoio_level20'
 
-result = subprocess.run([executable_path], capture_output=True, stdout='/tmp/rfqbmu')
-
-# Print the output messages
-print("Output:", result.stdout)
+with open("/tmp/rfqbmu", "w+") as output_file:
+    result = subprocess.run([executable_path], stdout=output_file)
+    # Move the file pointer to the start of the file, this is important since we just wrote to it.
+    output_file.seek(0)
+    # Print redirected file output
+    print(output_file.read())
 ```
 ## Notes
-
+We open the file with 'w+' because we are going to write and read to the file output.
 
 # Solution
+pwn.college{M2IlAdYWE0fHNrAMVMu7BeleFuD.QXwIDL3MTM3QzW}
