--- a/program-interaction/levels0-99/l-21.MD
+++ b/program-interaction/levels0-99/l-21.MD
@@ -1,19 +1,16 @@
-4# Process
-For the sake of simplicity and speed, we create a python script in a preferred editor and just invoke it using ipython to meet the challenge objectives. Ensure that the file is added in our home directory and made executable (`touch script.py; chmod +x script.py`). We then invoke `ipython` in the shell and use the ipython magic command run `%run .~/script` to get the solution.
+# Process
+The challenge checks to see if the environment is empty. I do this by intializing a `sub_env` variable to an empty dictionary. We then create a script that is in our home directory and executable (`touch script.py; chmod +x script.py`). AFteer we invoke `ipython` in the shell and use the ipython magic command run `%run ~/script` to get the solution.
 
 ## Program
 ```python
 import subprocess
 
 # Path to the challenge
-executable_path = '/challenge/embryoio_level20'
+executable_path = '/challenge/embryoio_level21'
 sub_env = {}
-result = subprocess.run([executable_path], env=sub_env, capture_output=True)
+result = subprocess.run([executable_path], env=sub_env, capture_output=True, text=True)
 
-print(result.stout)
+print(result.stdout)
 ```
-## Notes
-We open the file with 'w+' because we are going to write and read to the file output.
-
 # Solution
-pwn.college{M2IlAdYWE0fHNrAMVMu7BeleFuD.QXwIDL3MTM3QzW}
+pwn.college{IQtXAOef5-3lS_FcfBQO9Xfcrgv.QXxIDL3MTM3QzW}
