started and solved

--- a/program-interaction/levels0-99/20-29/l-22.MD
+++ b/program-interaction/levels0-99/20-29/l-22.MD
@@ -1,16 +1,12 @@
 # Process
-The challenge checks to see if the environment is empty. I do this by intializing a `sub_env` variable to an empty dictionary. We then create a script that is in our home directory and executable (`touch script.py; chmod +x script.py`). AFteer we invoke `ipython` in the shell and use the ipython magic command run `%run ~/script` to get the solution.
+This challenge checks to see if the parent process is `python`. I create a very simple python script that just runs the challenge script. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
 
 ## Program
 ```python
 import subprocess
-
-# Path to the challenge
-executable_path = '/challenge/embryoio_level21'
-sub_env = {}
-result = subprocess.run([executable_path], env=sub_env, capture_output=True, text=True)
-
+executable_path = '/challenge/embryoio_level22'
+result = subprocess.run([executable_path], capture_output=True, text=True)
 print(result.stdout)
 ```
 # Solution
-pwn.college{IQtXAOef5-3lS_FcfBQO9Xfcrgv.QXxIDL3MTM3QzW}
+pwn.college{U7ObBgBWNRr__gTVZo5xuiNm67x.QXyIDL3MTM3QzW}
