--- a/program-interaction/levels0-99/20-29/l-23.MD
+++ b/program-interaction/levels0-99/20-29/l-23.MD
@@ -1,12 +1,12 @@
 # Process
-This challenge checks to see if a password of 'ulelosql' is passed over stdin. I create a very simple python script that just runs the challenge script. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
+This challenge checks to see if the parent process is `python`. I create a very simple python script that just runs the challenge script. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
 
 ## Program
 ```python
 import subprocess
 executable_path = '/challenge/embryoio_level22'
-result = subprocess.run([executable_path], input='ulelosql', capture_output=True, text=True)
+result = subprocess.run([executable_path], capture_output=True, text=True)
 print(result.stdout)
 ```
 # Solution
-pwn.college{w5fBu6z8KdgQTT84n0c_m4EO6qD.QXzIDL3MTM3QzW}
+pwn.college{U7ObBgBWNRr__gTVZo5xuiNm67x.QXyIDL3MTM3QzW}
