--- a/program-interaction/levels0-99/20-29/l-24.MD
+++ b/program-interaction/levels0-99/20-29/l-24.MD
@@ -1,11 +1,11 @@
 # Process
-This challenge checks to see if a password of 'ulelosql' is passed over stdin. I create a very simple python script that just runs the challenge script. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
+This challenge checks to see if the first argument passed in is 'ffglncvhan'. I create a very simple python script that just runs the challenge script. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
 
 ## Program
 ```python
 import subprocess
-executable_path = '/challenge/embryoio_level22'
-result = subprocess.run([executable_path], input='ulelosql', capture_output=True, text=True)
+executable_path = '/challenge/embryoio_level23'
+result = subprocess.run([executable_path, 'ffglncvhan'], capture_output=True, text=True)
 print(result.stdout)
 ```
 # Solution
