challenge started and solved

--- a/program-interaction/levels0-99/20-29/l-25.MD
+++ b/program-interaction/levels0-99/20-29/l-25.MD
@@ -4,9 +4,9 @@ This challenge checks to see if the first argument passed in is 'ffglncvhan'. I 
 ## Program
 ```python
 import subprocess
-executable_path = '/challenge/embryoio_level24'
-result = subprocess.run([executable_path, 'ffglncvhan'], capture_output=True, text=True)
+executable_path = '/challenge/embryoio_level25'
+result = subprocess.run([executable_path], env={'mszsjp':'kkylibcrlu'}, capture_output=True, text=True)
 print(result.stdout)
 ```
 # Solution
-pwn.college{w5fBu6z8KdgQTT84n0c_m4EO6qD.QXzIDL3MTM3QzW}
+pwn.college{0ovJXA7YWbB-VqVPJtDhUSuths0.QX1IDL3MTM3QzW}
