--- a/program-interaction/levels0-99/20-29/l-27.MD
+++ b/program-interaction/levels0-99/20-29/l-27.MD
@@ -1,20 +1,18 @@
 # Process
 WELCOME! This challenge makes the following asks of you:
 - the challenge checks for a specific parent process : python
-- the challenge will check that input is redirected from a specific file path : /tmp/lcghdf
-- the challenge will check for a hardcoded password over stdin : hpvlhbyn
- 
+- the challenge will check that output is redirected to a specific file path : /tmp/bktoji
+
 I create a very simple python script that just runs the challenge script and imports the subprocess module to meet the other tasks. I create this script in my home directory and it executable (`touch script.py; chmod +x script.py`). After this I pass my script to the python interpreter using `python script.py` to get the solution.
 
-## Program
+## *script.py*
 ```python
 import subprocess
-executable_path = '/challenge/embryoio_level26'
-with open('/tmp/lcghdf', 'w+') as input_file:
-    input_file.write('hpvlhbyn\n')
-    input_file.seek(0)
-    result = subprocess.run([executable_path], capture_output=True, text=True, stdin=input_file)
-print(result.stdout)
+executable_path = '/challenge/embryoio_level27'
+with open('/tmp/bktoji', 'w+') as output_file:
+    result = subprocess.run([executable_path], stdout=output_file, text=True)
+    output_file.seek(0)
+    print(output_file.read())
 ```
 # Solution
-pwn.college{EePKfJTaR4aC65LfUfhglVPMLsn.QX2IDL3MTM3QzW}
+pwn.college{kTaz8piO9XPC1sIFv95GIHd0nRz.QX3IDL3MTM3QzW}
