--- a/program-interaction/levels0-99/20-29/l-28.MD
+++ b/program-interaction/levels0-99/20-29/l-28.MD
@@ -1,7 +1,15 @@
 # Process
+WELCOME! This challenge makes the following asks of you:
+- the challenge checks for a specific parent process : python
+- the challenge will check that the environment is empty (except LC_CTYPE, which is impossible to get rid of in some cases)
+
+We create a python script to run the challenge script and import the subprocess module to meet the other tasks. To ensure that the environment is empty, we use the env parmeter of the subprocess run method and set it equal to a null dictionary. We create this new script in our home directory and it make it executable (`touch ~/script.py; chmod +x ~/script.py`). After this I pass my script to the python interpreter using `python ~/script.py` to get the solution.
 
 ## *script.py*
 ```python
-
+import subprocess
+executable_path = '/challenge/embryoio_level28'
+result = subprocess.run([executable_path], env={}, capture_output=True, text=True)
+print(result.stdout)
 ```
 # Solution
