--- a/program-interaction/levels0-99/20-29/l-28.MD
+++ b/program-interaction/levels0-99/20-29/l-28.MD
@@ -13,3 +13,4 @@ result = subprocess.run([executable_path], env={}, capture_output=True, text=Tru
 print(result.stdout)
 ```
 # Solution
+pwn.college{MotzBnZ05Pe-9f5QZTNvTh6m6C5.QX4IDL3MTM3QzW}
