--- a/talking-web/l-23.MD
+++ b/talking-web/l-23.MD
@@ -7,5 +7,27 @@ The HTTP request must specify HTTP POST parameters:
 You must make this request using the nc command
 
 # Process
+```bash
+#!/bin/bash
+
+# Send an HTTP POST Request using nc
+HOST=127.0.0.1
+PORT=80
+PATH='/'
+DATA='a=0a1716a4415cd8ad23988fdb992a7e8b&b=%32%31%65%37%38%33%35%31%20%39%38%30%61%38%35%66%32%26%62%37%31%63%32%35%34%39%23%30%37%34%66%65%34%32%30' #
+CONTENT_LENGTH=${#DATA}
+
+/run/challenge/bin/nc $HOST $PORT <<EOF
+POST $PATH HTTP/1.0
+Host: $HOST
+Content-Type: application/x-www-form-urlencoded
+Content-Length: $CONTENT_LENGTH
+
+$DATA
+EOF
+
+echo $REQUEST | nc $HOST $PORT
+```
 
 # Solution
+pwn.college{883gYSGNewU69VWGhicURoOdcm0.dBTOyMDL3MTM3QzW}
