--- a/talking-web/l-20.MD
+++ b/talking-web/l-20.MD
@@ -26,4 +26,8 @@ Content-Length: $CONTENT_LENGTH
 $DATA
 EOF
 ```
+
+## Notes
+It is important to not that the version of `nc` which is needed to be run is located in a different location and must be called explictly using `/run/challenge/bin/nc`. This is important 
 # Solution
+pwn.college{gKhGh-uq0EIN8CSLRiAzkoaupMa.ddDOyMDL3MTM3QzW}
