--- a/talking-web/l-21.MD
+++ b/talking-web/l-21.MD
@@ -7,10 +7,12 @@ You must make this request using python
 
 # Process
 ```bash
-# Submit an HTTP Request using Python
-REQUEST_URL='http://127.0.0.1:80/?a=query'
-python3 -c "import requests; print(requests.get('$REQUEST_URL').text)"
+# Submit an HTTP POST Request using Python
+REQUEST_URL='http://127.0.0.1:80'
+python3 -c "import requests; response = requests.post('$REQUEST_URL', data={'a': 'd29859080a49dcf5bd045e4c2ceda807'}); print(response.text)"
 ```
 ## Notes
+We must remmeber that we are making a POST Request. 
 
 # Solution
+pwn.college{EAhuDKbtZv8sd0qTWrH3Kb4k33i.dhDOyMDL3MTM3QzW}
