--- a/talking-web/l-20.MD
+++ b/talking-web/l-20.MD
@@ -2,7 +2,7 @@
 After running the challenge program (`/challenge/run`), we are presented with the following task objectives.
 
 Make an HTTP request to 127.0.0.1 on port 80 to get the flag.
-The HTTP request must specify HTTP POST parameter `a` as value 583380eef26d372f7e6bf15a7f1ef725
+The HTTP request must specify HTTP POST parameter `a` as value `583380eef26d372f7e6bf15a7f1ef725`
 You must make this request using the nc command
 
 # Process
