--- a/talking-web/l-25.MD
+++ b/talking-web/l-25.MD
@@ -1,5 +1,14 @@
 # Problem
+Make an HTTP request to 127.0.0.1 on port 80 to get the flag.
+The HTTP request must specify a content type HTTP header of 'application/json'
+Must send an HTTP POST with the body as a JSON object that has a pair with name of `a` and a value of 20114596078dbcd097ac30e29167d0e2
+You must make this request using the curl command
+
 
 # Process
+```bash
+curl http://127.0.0.1:80/ -X POST -d '{"a":"20114596078dbcd097ac30e29167d0e2"}' -H 'Content-Type: application/json' 
+```
 
 # Solution
+pwn.college{0fK1fomBjyabCmwgSsBjxtoIXTC.dJTOyMDL3MTM3QzW}
