--- a/assembly-crash-course/l-1/l-1.MD
+++ b/assembly-crash-course/l-1/l-1.MD
@@ -7,7 +7,7 @@ In this level you will work with registers! Please set the following:
 Please give me your assembly in bytes (up to 0x1000 bytes):
 
 # Process
-We start by creating a simple assembly program (`~/asm.S`) that sets the `%rdi` register to `0x1337`. After this we use the following command `as -o asm.o asm.S` to assemble the object file
+We start by creating a simple assembly program (`~/asm.S`) that sets the `%rdi` register to `0x1337`. After this we use the following command `as -o asm.o asm.S` to assemble the object file.
 
 ```assembly
 .intel_syntax noprefix
