started level 2 correctly

--- a/assembly-crash-course/l-2/l-2.md
+++ b/assembly-crash-course/l-2/l-2.md
@@ -1,7 +1,11 @@
 # Problem
-WELCOME! This challenge makes the following asks of you:
-- the challenge checks for a specific parent process : binary
-- the challenge will check that env[KEY] holds value VALUE (listed to the right as KEY:VALUE) : mrsqev:oaxcmkzbmf
+
+Welcome to ASMLevel2
+==================================================
+In this level you will work with multiple registers. Please set the following:
+  rax = 0x1337
+  r12 = 0xCAFED00D1337BEEF
+  rsp = 0x31337
 
 # Process
 We start by creating a simple assembly program (`~/asm.S`). After this we use the following command `as -o asm.o asm.S` to assemble the object file.
