--- a/assembly-crash-course/l-3/l-3.md
+++ b/assembly-crash-course/l-3/l-3.md
@@ -1,11 +1,21 @@
 # Problem
 
-Welcome to ASMLevel2
+Welcome to ASMLevel3
 ==================================================
-In this level you will work with multiple registers. Please set the following:
-  rax = 0x1337
-  r12 = 0xCAFED00D1337BEEF
-  rsp = 0x31337
+
+Here are some useful instructions:
+  add reg1, reg2       <=>     reg1 += reg2
+  sub reg1, reg2       <=>     reg1 -= reg2
+  imul reg1, reg2      <=>     reg1 *= reg2
+
+div is more complicated and we will discuss it later.
+Note: all 'regX' can be replaced by a constant or memory location
+
+Do the following:
+  add 0x331337 to rdi
+
+We will now set the following in preparation for your code:
+  rdi = 0xb09
 
 # Process
 We start by creating a simple assembly program (`~/asm.S`). After this we use the following command `as -o asm.o asm.S` to assemble the object file. We have to run `objcopy -O binary --only-section=.text asm.o asm.bin` to copy the .text section to the asm.bin file, and send that to the challenge using `cat ./asm.bin | /challenge/run`
@@ -16,8 +26,7 @@ We start by creating a simple assembly program (`~/asm.S`). After this we use th
 .global _start
 
 _start:
-    mov rax, 0x1337
-    mov r12, 0xCAFED00D1337BEEF
-    mov rsp, 0x31337
+    add rdi, 0x331337
+
 ```
 # Solution
