Problem started, found how to set environemntal variables in C, using approach 1

--- a/program-interaction/levels0-99/30-39/l-32/l-32.md
+++ b/program-interaction/levels0-99/30-39/l-32/l-32.md
@@ -6,4 +6,8 @@ WELCOME! This challenge makes the following asks of you:
 # Process
 We write and then compile our script program using the following command `gcc ~/l-32.c -o ~/l-32`.
 
+
+# References
+https://dev.to/namantam1/ways-to-get-and-set-environment-variables-in-c-200m
+
 # Solution
