--- a/program_interaction/levels0-99/30-39/l-32/l-32.md
+++ b/program_interaction/levels0-99/30-39/l-32/l-32.md
@@ -6,8 +6,22 @@ WELCOME! This challenge makes the following asks of you:
 # Process
 We write and then compile our script program using the following command `gcc ~/l-32.c -o ~/l-32`.
 
+Attempting to solve this problem by setting the enviornmental variable `mrsqev` to `oaxcmkzbmf` using setenv() and the environ variable.
 
-# References
+Using the information we accquired from the references we found, we set the variable using setenv() the then pass the environ variable to execve().
+
+## References
+From the exec manpage. `man exec | grep environment`
+> All other exec() functions (which do not include 'e' in the suffix) take the environment for the new process image from the external variable environ in the calling process.
+
+
+From the environ manpage. `man environ | grep setenv`
+> A C program can manipulate its environment using the functions getenv(3), putenv(3), setenv(3), and unsetenv(3).
+
+setenv() File Prototype and Declaration
+```c
+    int setenv(const char *name, const char *value, int overwrite);
+```
 https://dev.to/namantam1/ways-to-get-and-set-environment-variables-in-c-200m
-
 # Solution
+pwn.college{ga4vk_lKzJ3c-9w4sVnL8RfvRq3.QXyMDL3MTM3QzW}
