--- a/program_interaction/levels0-99/30-39/l-35/l-35.md
+++ b/program_interaction/levels0-99/30-39/l-35/l-35.md
@@ -3,4 +3,11 @@ WELCOME! This challenge makes the following asks of you:
 - the challenge checks for a specific parent process : binary
 - the challenge will check that the environment is empty (except LC_CTYPE, which is impossible to get rid of in some cases)
 
+# Process
+The two ways that I came to solving this challenge involved creating an environ variable and setting it to NULL when passing it into execve or just by passing NULL into `execve()`.
+
+## Notes
+The challenge script is no longer "/challenge/embryoio_level*" but just "/challenge/run". This is important to be noted in the argument passed into `arg[]`.
+
 # Solution
+pwn.college{IXezxuxqr0g4D0GACOqkdF-O4tK.QX1MDL3MTM3QzW}
