--- a/program_interaction/levels0-99/30-39/l-36/l-36.md
+++ b/program_interaction/levels0-99/30-39/l-36/l-36.md
@@ -3,4 +3,16 @@ WELCOME! This challenge makes the following asks of you:
  - the challenge checks for a specific parent process : bash
  - the challenge checks for a specific process at the other end of stdout : cat
 
+# Process
+We have to make sure to run /bin/bash in it's interactive-mode and thus can not submit our solution through a shell script.
+
+## Code
+```bash
+/challenge/run | /bin/cat
+```
+
+## Notes
+It is important to not that we must explicitly pass /bin/cat to the /challenge/run function as the symbolic link to cat will not work.
+
 # Solution
+pwn.college{QMiYSJ7tR07L5wWCY2Ll2bcLJjO.QX2MDL3MTM3QzW}
