--- a/program_interaction/levels0-99/30-39/l-39/l-39.md
+++ b/program_interaction/levels0-99/30-39/l-39/l-39.md
@@ -5,7 +5,7 @@
 [INFO] - the challenge will output a reward file if all the tests pass : /flag
 
 # Process
-
+We have to make sure to run /bin/bash in it's interactive-mode and thus can not submit our solution through a shell script.
 
 ## Code
 ```bash
