--- a/program_interaction/levels0-99/40-49/l-40/l-40.md
+++ b/program_interaction/levels0-99/40-49/l-40/l-40.md
@@ -6,5 +6,15 @@
 [INFO] - the challenge will output a reward file if all the tests pass : /flag
 
 # Process
+We have to make sure to run `/bin/bash` in it's interactive-mode and thus can not submit our solution through a shell script. I created a file `password` that I created with the password `aljgoaqw` inside.
+
+## Code
+```bash
+/bin/cat password - | /challenge/run 
+```
+
+## Notes
+You can pass this level by only running `/bin/cat - | /challenge/run` and manually passing the password over stdin.
 
 # Solution
+pwn.college{42ZYTrdUJZaI-_cKy6gOdCwl9kL.QXwQDL3MTM3QzW}
