--- a/program_interaction/levels0-99/40-49/l-41/l-41.md
+++ b/program_interaction/levels0-99/40-49/l-41/l-41.md
@@ -7,7 +7,16 @@
 
 
 # Process
+We have to make sure to run `/bin/bash` in it's interactive-mode and thus can not submit our solution through a shell script. After hardcoding the password in backwards `juwjrlyu`, I send a CTRL-D to end accpeting input.
+
+## Code
+```bash
+/bin/rev | /challenge/run 
+```
 
 ## Notes
+You might have to send an EOF flag to stop accepting input or the terminal will hand while waiting for rev input. It is also important to pass the hard-coded password in backwards.
+
 
 # Solution
+pwn.college{YAhfG0K9PpreLTBuWkjgLdnjDG6.QXxQDL3MTM3QzW}
