solved: l-27 two ways w/ builtins + requets

--- a/talking_web/l-27.md
+++ b/talking_web/l-27.md
@@ -5,7 +5,36 @@ Must send an HTTP POST with the body as a JSON object that has a pair with name 
 You must make this request using python
 
 # Process
-```bash
+
+## Option 1 -- Requests Library
+```python
+import requests
+print(requests.post('http://127.0.0.1:80/', json={"a": "e2c1d2caf435c2d4a23caa4bb8b7ea43"}).text)
+```
+### Notes
+The main point of this task is to note that to send json objects using the requets method in python, you must pass the JSON object via the `json` parameter and not the data parameter to correctly specify the 'applicaiton/json' header.
+
+## Option 2 -- Built-in Libraries
+
+```python 
+import urllib.request
+import urllib.parse
+import json
+
+# Prepare the data
+data = json.dumps({"a": "e2c1d2caf435c2d4a23caa4bb8b7ea43"}).encode('utf-8')
+
+# Set up the request
+url = 'http://127.0.0.1:80/'
+headers = {'Content-Type': 'application/json'}
+request = urllib.request.Request(url, data=data, headers=headers, method='POST')
+
+# Send the request and read the response
+with urllib.request.urlopen(request) as response:
+    response_text = response.read().decode('utf-8')
+
+print(response_text)
 ```
 
 # Solution
+pwn.college{oIdlawIc5UxVSF2mcf3VhIVS9dU.dRTOyMDL3MTM3QzW}
