--- a/talking_web/l-30.md
+++ b/talking_web/l-30.md
@@ -20,6 +20,28 @@ import requests
 print(requests.post("http://127.0.0.1:80",json={"a":"8702c7b382ec9ee60c6590dba79ac653","b":{"c":"b72295a9", "d": ["4f15de88","05ba7a3e 88e89bed&d44f9e01#0326985c"]}}).text)
 ```
 
+# Option 2 -- Builtin Libraries
+
+```python 
+import urllib.request
+import urllib.parse
+import json
+
+# Prepare the data
+data = json.dumps({"a":"8702c7b382ec9ee60c6590dba79ac653","b":{"c":"b72295a9", "d": ["4f15de88","05ba7a3e 88e89bed&d44f9e01#0326985c"]}}).encode('utf-8')
+
+# Set up the request
+url = 'http://127.0.0.1:80/'
+headers = {'Content-Type': 'application/json'}
+request = urllib.request.Request(url, data=data, headers=headers, method='POST')
+
+# Send the request and read the response
+with urllib.request.urlopen(request) as response:
+    response_text = response.read().decode('utf-8')
+
+print(response_text)
+```
+
 # Solution
 
 pwn.college{wBaksnEWZUQ9VcLPeMyczCDF_Bv.ddTOyMDL3MTM3QzW}
