--- a/talking_web/l-33.md
+++ b/talking_web/l-33.md
@@ -16,6 +16,16 @@ requests.get("http://127.0.0.1:80")
 
 If you send a GET request to the web root (`/`), you will see in on the Server output that a request to `/1381e730b560cb2e4d97a515f7ac56a7` is made. This is the location of where to redirect to access the flag. You can then resend a request to the proper location and also access the flag there.
 
+## Option 2 -- Builtin Libraries
+
+```python
+import urllib.request
+request = urllib.request.Request("http://127.0.0.1:80", method='GET')
+with urllib.request.urlopen(request) as response:
+    # Read and decode the response
+    print(response.read().decode('utf-8'))
+
+```
 # Solution
 
 pwn.college{M9jfXO5qyADAs-6B2SCFCRyEf3v.dBDMzMDL3MTM3QzW}
