--- a/talking_web/l-34.md
+++ b/talking_web/l-34.md
@@ -5,8 +5,10 @@ You must make this request using the curl command
 
 # Process
 
+We send the first HTTP GET Request and use the `-c` curl flag to save the cookies to a `~/cookies`. We then resend the request with the cookies using the `-b` flag.
+
 ```bash
-curl -v http://127.0.0.1:80/ -c cookies.txt; curl -b cookies.txt -v http://127.0.0.1:80/
+curl http://127.0.0.1:80/ -c ~/cookies; curl -b ~/cookies -Lv http://127.0.0.1:80/
 ```
 
 ## Notes
