--- a/program_interaction/levels0-99/50-59/50/l-50.md
+++ b/program_interaction/levels0-99/50-59/50/l-50.md
@@ -1,4 +1,5 @@
 # Problem
+
 [INFO] WELCOME! This challenge makes the following asks of you:
 [INFO] - the challenge checks for a specific parent process : ipython
 [INFO] - the challenge checks for a specific process at the other end of stdout : sed
@@ -6,4 +7,18 @@
 
 # Process
 
+After creating `~/script.py` using the provided code, I start the ipython program by running `/usr/bin/ipython` then I execute my script using `%run ~/script.py`.
+
+## Notes
+
+Ensure to run `/usr/bin/ipython` instead of `ipython` to bypass the following error:
+
+```plaintext
+  File "/challenge/chio.py", line 7, in <module>
+    import asteval
+ModuleNotFoundError: No module named 'asteval'
+```
+
 # Solution
+
+pwn.college{4RaUcbSIxrticseYILDl5E7Kkeq.QXwUDL3MTM3QzW}
