--- a/program_interaction/levels0-99/50-59/52/l-52.md
+++ b/program_interaction/levels0-99/50-59/52/l-52.md
@@ -13,6 +13,8 @@ After creating `~/script.py` using the provided code, I start the ipython progra
 
 ## Notes
 
+You will need to send an [ENTER] to stop the program from waiting for user input and print the flag.
+
 Ensure to run `/usr/bin/ipython` instead of `ipython` to bypass the following error:
 
 ```plaintext
@@ -22,3 +24,4 @@ ModuleNotFoundError: No module named 'asteval'
 ```
 
 # Solution
+ pwn.college{wXEwCIIYhy9KA8Fg20WG1bxnbjg.QXyUDL3MTM3QzW}
