--- a/program_interaction/levels0-99/50-59/54/l_54.md
+++ b/program_interaction/levels0-99/50-59/54/l_54.md
@@ -10,3 +10,5 @@
 After creating `~/script.py` using the provided code, run the python script by executng `python3 ~/script.py`.
 
 # Solution
+
+pwn.college{wYz4rGKDCh-zFe93HoUG5NINTX\_.QX0UDL3MTM3QzW}
