--- a/program_interaction/0-99/50-59/54/l_54.md
+++ b/program_interaction/0-99/50-59/54/l_54.md
@@ -11,4 +11,4 @@ After creating `~/script.py` using the provided code, run the python script by e
 
 # Solution
 
-pwn.college{wYz4rGKDCh-zFe93HoUG5NINTX\_.QX0UDL3MTM3QzW}
+pwn.college{wYz4rGKDCh-zFe93HoUG5NINTX_.QX0UDL3MTM3QzW}
