--- a/program_interaction/0-99/50-59/55/l_55.md
+++ b/program_interaction/0-99/50-59/55/l_55.md
@@ -1,4 +1,5 @@
 # Problem
+
 [INFO] WELCOME! This challenge makes the following asks of you:
 [INFO] - the challenge checks for a specific parent process : python
 [INFO] - the challenge checks for a specific process at the other end of stdout : grep
@@ -6,5 +7,8 @@
 
 # Process
 
+After creating `~/script.py` using the provided code, run the python script by executng `python3 ~/script.py`.
 
 # Solution
+
+pwn.college{k4_Jun0W4S6z4-ANfjJxQ5zCdVk.QX1UDL3MTM3QzW}
