--- a/program_interaction/0-99/50-59/56/l_56.md
+++ b/program_interaction/0-99/50-59/56/l_56.md
@@ -2,7 +2,7 @@
 
 [INFO] WELCOME! This challenge makes the following asks of you:
 [INFO] - the challenge checks for a specific parent process : python
-[INFO] - the challenge checks for a specific process at the other end of stdout : cat
+[INFO] - the challenge checks for a specific process at the other end of stdout : sed
 [INFO] - the challenge will output a reward file if all the tests pass : /flag
 
 # Process
@@ -10,5 +10,4 @@
 After creating `~/script.py` using the provided code, run the python script by executing `python3 ~/script.py`.
 
 # Solution
-
-pwn.college{wYz4rGKDCh-zFe93HoUG5NINTX_.QX0UDL3MTM3QzW}
+pwn.college{oyZjPlKB50r-0EpJ85XSedvlq_U.QX2UDL3MTM3QzW}
