--- a/talking_web/l-36.md
+++ b/talking_web/l-36.md
@@ -6,9 +6,33 @@ Make an HTTP request to `127.0.0.1` on port `80` to get the flag. Make any HTTP 
 
 ## Steps
 
+### Notes
+
+I found I was able to get the flag by just sending a simple get requests to localhost on port 80 without specifiying anything else in to the requests function.
+
+```python
+import requests
+
+
+def main():
+    print(requests.get("http://127.0.0.1:80/").text)
+
+if __name__ == "__main__":
+    main()
+
+```
+
 ### solution.sh
 
 ```python
+import requests
+
+
+def main():
+    print(requests.get("http://127.0.0.1:80/").text)
+
+if __name__ == "__main__":
+    main()
 
 ```
 
